Fixed a problem with display  of administrative frontend on Firefox, which caused the texts list of page not to be displayed any more.

--- a/frontend/justso.scss
+++ b/frontend/justso.scss
@@ -15,7 +15,6 @@ body {
 
 #content {
   height: 100%;
-  overflow: hidden;
   padding-top: 70px;
   margin-top: -70px;
 }
